fix: exposing query to update ingestionFlowFile fileNames
